// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component base with style should return a Button with a zIndex when using a number 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
  z-index: 500;
}

<button
  className="c0"
>
  Do this
</button>
`;

exports[`Button Component base with style should return a Button with a zIndex when using a string 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
  z-index: 500;
}

<button
  className="c0"
>
  Do this
</button>
`;

exports[`Button Component base with style should return a Button with bgColor and color 1`] = `
.c0 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: hsl(122.4,39.4%,49.2%);
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  id="exampleColor"
>
  Do this
</button>
`;

exports[`Button Component base with style should return a Button with lg 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  id="exampleColor"
>
  Do this
</button>
`;

exports[`Button Component base with style should return a Button with sm 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  id="exampleColor"
>
  Do this
</button>
`;

exports[`Button base should return a Button 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
>
  Do this
</button>
`;

exports[`Button base should return a Button with disabled 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  disabled={true}
  id="exampleColor"
>
  Do this
</button>
`;

exports[`Button using theme colors Button using styled system fontSize should return a Button with specified font size 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  font-size: 20px;
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  fontSize={3}
  variant="primary"
>
  Do this
</button>
`;

exports[`Button using theme colors Button using variant style theme colors should return a Button 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
  variant="primary"
>
  Do this
</button>
`;

exports[`Button using theme colors should return a Button 1`] = `
.c0 {
  color: hsl(65,65%,25%);
  background-color: hsl(65,65%,50%);
  border: 1px solid hsl(323.3,84.6%,28%);
  line-height: 1.5;
  position: relative;
}

<button
  className="c0"
>
  Do this
</button>
`;
